# hw06-SeanShimohara

./: index.ipynb
ligotools/: README.md  setup.cfg  setup.py
ligotools/ligotools.egg-info/: PKG-INFO  SOURCES.txt
ligotools/ligotools/tests/: tests_readligo.py
