[metadata]
name             = ligotools
version          = ligotools.__version__
author           = Ligo Scientific Collaboration (LSC) and Sean Shimohara
author_email     = sean_shimohara@berkeley.edu
description      = Ligotools package to run index.ipynb
long_description = file: README.md
long_description_content_type = text/markdown
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = == 2.7.18,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*
	
[tool:pytest]
python_files = tests_*.py